<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context="com.smlb.ui.activity.LoginActivity">

    <ImageButton
        android:id="@+id/ibtn_login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:src="@drawable/iv_close_white_24dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello_dribbble"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/login_description"
            android:textColor="@color/text_white"
            android:textSize="15sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/btn_to_authorize_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_pink"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:paddingTop="14dp"
                android:text="@string/btn_login"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progress_login"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
